objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Specie_Focus__c</fullName>
        <description>Specie focus for campaign</description>
        <label>Specie Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cattle</fullName>
                </value>
                <value>
                    <fullName>Companion</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Flock</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Pet</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Swine</fullName>
                </value>
                <value>
                    <fullName>Education &amp; Training</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>University/Recruiting</fullName>
                </value>
                <value>
                    <fullName>Dreamforce</fullName>
                </value>
                <value>
                    <fullName>Backyard Poultry</fullName>
                </value>
                <value>
                    <fullName>Dairy - Young Animal</fullName>
                </value>
                <value>
                    <fullName>Dairy - Transition &amp; Lactating Cow</fullName>
                </value>
                <value>
                    <fullName>Deer &amp; Elk</fullName>
                </value>
                <value>
                    <fullName>Fish &amp; Aqua</fullName>
                </value>
                <value>
                    <fullName>Goat</fullName>
                </value>
                <value>
                    <fullName>Mazuri</fullName>
                </value>
                <value>
                    <fullName>PMI Pet</fullName>
                </value>
                <value>
                    <fullName>Rabbit</fullName>
                </value>
                <value>
                    <fullName>Swine - Commercial</fullName>
                </value>
                <value>
                    <fullName>Swine - Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Species_Sub_Focus__c</fullName>
        <description>The species sub-focus at an event.</description>
        <label>Species Sub-Focus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cattle</fullName>
                </value>
                <value>
                    <fullName>Companion</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Flock</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Pet</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Swine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_type__c</fullName>
        <description>Further categorization for campaign (based on Campaign Type)</description>
        <label>Sub-type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calf and Heifer</fullName>
                </value>
                <value>
                    <fullName>Cattle Great Starts Program</fullName>
                </value>
                <value>
                    <fullName>Cattle Mineral Meetings</fullName>
                </value>
                <value>
                    <fullName>Check-R-Board Days</fullName>
                </value>
                <value>
                    <fullName>Chick Days</fullName>
                </value>
                <value>
                    <fullName>Dairy – Cool Cow Promotion</fullName>
                </value>
                <value>
                    <fullName>Double Dog Bowl Dare</fullName>
                </value>
                <value>
                    <fullName>Equine Plus Program</fullName>
                </value>
                <value>
                    <fullName>Flocktober</fullName>
                </value>
                <value>
                    <fullName>Horse 60 Day Trial</fullName>
                </value>
                <value>
                    <fullName>Horse Owner Workshop (HOW Event)</fullName>
                </value>
                <value>
                    <fullName>Other Cattle local promos/meeting events</fullName>
                </value>
                <value>
                    <fullName>Other Dairy local meeting events</fullName>
                </value>
                <value>
                    <fullName>Other Event</fullName>
                </value>
                <value>
                    <fullName>Other Flock local promos/meeting event</fullName>
                </value>
                <value>
                    <fullName>Other Horse local promos/meeting events</fullName>
                </value>
                <value>
                    <fullName>Other Pet local promo/dealer event</fullName>
                </value>
                <value>
                    <fullName>Other Swine local meeting events</fullName>
                </value>
                <value>
                    <fullName>Pet Ambassador Event</fullName>
                </value>
                <value>
                    <fullName>Producer Meeting</fullName>
                </value>
                <value>
                    <fullName>Purina Bucks</fullName>
                </value>
                <value>
                    <fullName>Purina Feed Frenzy</fullName>
                </value>
                <value>
                    <fullName>Purina Proud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Message__c</fullName>
        <formula>&quot;PURINA&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_To__c</fullName>
        <formula>&quot;95323&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_2_Indicator__c</fullName>
        <formula>If( Date_of_Event__c &gt; TODAY() +2,&quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today + 2 Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_Minus_2__c</fullName>
        <formula>Today() - 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today - 2 Indicator</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Converted_Producers__c</fullName>
        <description>Number of producers that converted from Farm VIP Event</description>
        <label>Total Converted Producers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Count__c</fullName>
        <description>The total count of campaign members for this campaign. This includes campaign members of all statuses.</description>
        <inlineHelpText>The total count of campaign members for this campaign</inlineHelpText>
        <label>Total Count</label>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Leads_and_Contacts__c</fullName>
        <description>This field shows the sum of Contacts and Leads associated to this event.</description>
        <formula>NumberOfContacts +  NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field shows the sum of Contacts and Leads associated to this event.</inlineHelpText>
        <label>Total Leads and Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visibility_End_Date__c</fullName>
        <description>Promotions (non-product)</description>
        <label>Visibility End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visibility_Start_Date__c</fullName>
        <description>Promotion (non-product)</description>
        <label>Visibility Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Customer_Event_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Customer Event ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Event_Owner_ID__c</fullName>
        <formula>Owner.X18_Digit_User_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Event Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Week_Ago_Indicator_Date_of_Event__c</fullName>
        <formula>if(and( 
Date_of_Event__c &gt;=  First_Day_of_Last_Week__c  , 
Date_of_Event__c &lt;=  Last_Day_of_Last_Week__c) ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1 Week Ago Indicator (Date of Event)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Week_Ago_Indicator_End_Date__c</fullName>
        <formula>if(and( 
EndDate &gt;=  First_Day_of_Last_Week__c  , 
EndDate &lt;=  Last_Day_of_Last_Week__c ),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1 Week Ago Indicator (End Date)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Weeks_Ago_Indicator_Date_of_Event__c</fullName>
        <formula>if(and(
 Date_of_Event__c  &gt;=  First_Day_2_Weeks_Ago__c ,
 Date_of_Event__c  &lt;=  Last_Day_2_Weeks_Ago__c ),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2 Weeks Ago Indicator (Date of Event)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Weeks_Ago_Indicator_End_Date__c</fullName>
        <formula>if(and(
   EndDate  &gt;=  First_Day_2_Weeks_Ago__c ,
   EndDate  &lt;=  Last_Day_2_Weeks_Ago__c ),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2 Weeks Ago Indicator (End Date)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X7_Days_Prior_to_Event_Date__c</fullName>
        <formula>Date_of_Event__c -7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>7 Days Prior to Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_of_Event__c</fullName>
        <formula>Text(Year( Date_of_Event__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year of Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Won_Opportunities__c</fullName>
        <formula>If(
 NumberOfOpportunities =0,0,NumberOfWonOpportunities / NumberOfOpportunities
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Won Opportunities</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Specie_Focus__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Event_Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_Attendees__c</columns>
        <columns>Associated_Dealer__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Digigraph_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Customer Events</label>
    </listViews>
    <listViews>
        <fullName>All_Customer_Events_LAST_Month</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Specie_Focus__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Event_Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_Attendees__c</columns>
        <columns>Associated_Dealer__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_of_Event__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Customer_Events,Campaign.National_Regional_Events</value>
        </filters>
        <label>All Customer Events Last Month</label>
    </listViews>
    <listViews>
        <fullName>All_Customer_Events_Next_Month</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Specie_Focus__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Event_Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_Attendees__c</columns>
        <columns>Associated_Dealer__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_of_Event__c</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Customer_Events,Campaign.National_Regional_Events</value>
        </filters>
        <label>All Customer Events Next Month</label>
    </listViews>
    <listViews>
        <fullName>All_Customer_Events_This_Month</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Specie_Focus__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Event_Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_Attendees__c</columns>
        <columns>Associated_Dealer__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_of_Event__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Customer_Events,Campaign.National_Regional_Events</value>
        </filters>
        <label>All Customer Events This Month</label>
    </listViews>
    <listViews>
        <fullName>Cancelled_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Sub_type__c</columns>
        <columns>Specie_Focus__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Event_Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_Attendees__c</columns>
        <columns>Associated_Dealer__c</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Canceled</value>
        </filters>
        <label>Canceled Events</label>
    </listViews>
    <listViews>
        <fullName>Completed_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Sub_type__c</columns>
        <columns>Specie_Focus__c</columns>
        <columns>Event_Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_Attendees__c</columns>
        <columns>Associated_Dealer__c</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Events</label>
    </listViews>
    <listViews>
        <fullName>Dairy_Customer_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Specie_Focus__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Event_Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_Attendees__c</columns>
        <columns>Associated_Dealer__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Customer_Events,Campaign.National_Regional_Events</value>
        </filters>
        <filters>
            <field>Specie_Focus__c</field>
            <operation>equals</operation>
            <value>Dairy</value>
        </filters>
        <label>Dairy Customer Events</label>
        <sharedTo>
            <group>Jill_Bonham</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Engagement_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Specie_Focus__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_Attendees__c</columns>
        <columns>Total_Leads_and_Contacts__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Engagement_Campaign</value>
        </filters>
        <label>Engagement Campaigns</label>
        <sharedTo>
            <role>National_Retail_Exotics_Marketing</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Farm_VIP_Events_Future</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Specie_Focus__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Farm_VIP_Event</value>
        </filters>
        <filters>
            <field>Date_of_Event__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Farm VIP Events - Future</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Farm_VIP_Events_Past</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Specie_Focus__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Farm_VIP_Event</value>
        </filters>
        <filters>
            <field>Date_of_Event__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Farm VIP Events - Past</label>
        <sharedTo>
            <group>Farm_VIP_Event_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Farm_VIP_s_Completed_Load_Newsletter</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4)</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Number_of_Attendees__c</columns>
        <columns>FARM_VIP_Newsletter_Null__c</columns>
        <columns>Farm_VIP_Newsletter_Load_Not_Null__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Farm_VIP_Event</value>
        </filters>
        <filters>
            <field>FARM_VIP_Newsletter_Null__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Farm_VIP_Newsletter_Load_Not_Null__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Farm VIP&apos;s Completed - Load Newsletter</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Customer_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Sub_type__c</columns>
        <columns>Specie_Focus__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Event_Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_Attendees__c</columns>
        <columns>Associated_Dealer__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Customer Events</label>
    </listViews>
    <listViews>
        <fullName>Planned_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Sub_type__c</columns>
        <columns>Specie_Focus__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Event_Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_Attendees__c</columns>
        <columns>Associated_Dealer__c</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Planned</value>
        </filters>
        <label>Planned Events</label>
    </listViews>
    <listViews>
        <fullName>Regional_National_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Specie_Focus__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Event_Location__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_Attendees__c</columns>
        <columns>Associated_Dealer_18_Digit_ID__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.National_Regional_Events</value>
        </filters>
        <label>Regional/National Events</label>
    </listViews>
    <listViews>
        <fullName>Registration_Closed_Events</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Specie_Focus__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Registration Closed</value>
        </filters>
        <label>Registration Closed VIP Events</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Builder_Promotions</fullName>
        <active>true</active>
        <description>Business Builder Promotions</description>
        <label>Business Builder Promotions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Events</fullName>
        <active>true</active>
        <description>Local Events</description>
        <label>Customer Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>Engagement_Campaign</fullName>
        <active>true</active>
        <description>Newsletters, Promotional Campaigns, etc</description>
        <label>Engagement Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Farm_VIP_Event</fullName>
        <active>true</active>
        <description>Record Type that will capture details for Farm VIP Events</description>
        <label>Farm VIP Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>National_Regional_Events</fullName>
        <active>true</active>
        <description>National and Regional Events</description>
        <label>National/Regional Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>PromotionsPrebooking</fullName>
        <active>true</active>
        <description>Used for managing all Promotions and Pre-Booking</description>
        <label>Promotions and Pre-Booking</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Campaign_Name_Not_PMI_Brands_Local_Event</fullName>
        <active>true</active>
        <description>If the campaign record type is &quot;Customer Event&quot;, then the campaign name should not include &quot;Exclusive&quot;, &quot;Infinia&quot; or &quot;Red Flannel&quot; when the Specie is not Pet and the Specie Subtype is Pet.</description>
        <errorConditionFormula>And( 
RecordTypeId = &quot;012j0000000zFvz&quot;, 
text( Specie_Focus__c ) &lt;&gt; &quot;Pet&quot;, 
text( Species_Sub_Focus__c ) = &quot;Pet&quot;, 
Or( 
CONTAINS(Name, &quot;Red Flannel&quot;), 
CONTAINS(Name, &quot;Exclusive&quot;), 
CONTAINS(Name, &quot;Infinia&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The event name cannot contain a PMI Nutrition brand name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Events_Invalid_Dates</fullName>
        <active>true</active>
        <description>For Customer Events, the End Date of the Event cannot be before the Start Date.</description>
        <errorConditionFormula>and( 
RecordTypeId=&quot;012j0000000zFvz&quot;, 
EndDate &lt; Date_of_Event__c 
)</errorConditionFormula>
        <errorDisplayField>EndDate</errorDisplayField>
        <errorMessage>End Date cannot occur before the start date of the event.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Farm_VIP_Community_Fields_Required</fullName>
        <active>true</active>
        <description>&apos;Dealer Facing Description&apos; and &apos;Event City, State&apos; Required when Display in Dealer Community is TRUE for Farm VIP Events</description>
        <errorConditionFormula>AND(
 RecordType.Name = &apos;Farm VIP Event&apos;,
 Display_in_Dealer_Community__c = TRUE, 
 OR(
  ISBLANK(Short_Description__c),
  ISBLANK(Event_Location__c))
  )</errorConditionFormula>
        <errorMessage>&apos;Dealer Facing Description&apos; and &apos;Event City, State&apos; are required before displaying the Customer Event in the Customer Community</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Regional_Event_Region_Included</fullName>
        <active>true</active>
        <description>If Regional Event, the Event Region must be included</description>
        <errorConditionFormula>AND( RecordType.Name = &quot;National/Regional Events&quot;, ISPICKVAL( Type , &quot;Regional&quot;),  ISBLANK( TEXT( Region_Picklist__c ) ) )</errorConditionFormula>
        <errorDisplayField>Region_Picklist__c</errorDisplayField>
        <errorMessage>Please include the Event Region for this Regional Event</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>National_Community_Fields_Required</fullName>
        <active>true</active>
        <description>&apos;Dealer Facing Description&apos; and &apos;Event City, State&apos; Required when Display in Dealer Community is TRUE for National/Regional Events</description>
        <errorConditionFormula>AND(
 RecordType.Name = &apos;National/Regional Events&apos;,
 Display_in_Dealer_Community__c = TRUE, 
  OR(
  ISBLANK(Short_Description__c),
  ISBLANK(Event_Location__c))
  )</errorConditionFormula>
        <errorMessage>&apos;Dealer Facing Description&apos;,  and &apos;Event City, State&apos; are required before displaying the Customer Event in the Customer Community</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_Code_Cannot_be_00000</fullName>
        <active>true</active>
        <description>Only System Administrators can enter the zip code of &quot;00000&quot;</description>
        <errorConditionFormula>And(
or(
Event_Zip__c =&quot;00000&quot;,
Event_Zip__c =&quot;0000&quot;,
Event_Zip__c =&quot;000&quot;,
Event_Zip__c =&quot;00&quot;,
Event_Zip__c =&quot;0&quot;),
Not($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
        <errorDisplayField>Event_Zip__c</errorDisplayField>
        <errorMessage>This is not a valid zip code.</errorMessage>
    </validationRules>
</CustomObject>